style.css
/* ... */
/* .random2 {
    position: absolute;
    top: 2%;
    right: 23%;
    transform: rotate(-90deg);
    color: transparent;
    font-size: 4rem;
    font-weight: 900;
    -webkit-text-stroke-color: white;
    -webkit-text-stroke-width: 0.05rem;
} */

.random3 {
    position: fixed;
    top: 77%;
    left: -3%;
    transform: rotate(90deg);
    color: transparent;
    font-size: 4rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-right 3s;

}

@media (max-width:900px) {
    .random4 {
        display: none;
    }
    #box3 {
        display: none;
    }
}

.random4 {

    position: fixed;
    top: 67%;
    right: 3%;

    color: transparent;
    font-size: 8rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-up 3s;

}



.container1 pre {
    position: fixed;
    top: 50%;
    left: 25%;
    font-size: 1.5rem;
    font-weight: 600;
    color: #A0CD60;
    animation: slide-up 2.5s;
}

@media (max-width:500px) {
    .container1 pre {
        position: absolute;
        top: 65%;
        left: 35%;
        width: 15%;
        padding-right: 0%;
        font-size: 1rem;
        font-weight: 600;
        color: #A0CD60;
        animation: slide-up 2.5s;
    }

    .container1 .main-name {
        position: absolute;
        top: 20%;
        left: 2%;
        font-size: 6rem;
        font-weight: 900;
        color: #A0CD60;
        animation: slide-right 4s;
    }

    .random1{
        display: none;
    }
}


.random {
    transition: 0.3s;
}

.random:hover {
    color: #CEF09D;

}

.main-name {
    position: fixed;
    top: 15%;
    left: 2%;
    font-size: 8rem;
    font-weight: 900;
    color: #A0CD60;
    animation: slide-right 4s;
}

.container2 {
    position: absolute;
    top: 100%;
    height: 100%;
    background: #A0CD60;
    width: 100%;
}

.container2 p {
    font-family: 'Fira Code';
    font-size: 5rem;
    font-weight: 900;
    padding-left: 2rem;
    color: transparent;
    -webkit-text-stroke-color: #38184C;
    -webkit-text-stroke-width: 0.2rem;
}

/* @media screen and (max-width:1350px) {
    .code{
        font-family: 'Fira Code';
        background-color: #1F0802;
        position: absolute;
        top: 55%;
        font-size: 0.4rem;
        font-weight: 700;
        left: 5%;
        padding: 3rem;
        white-space: pre-wrap;
        word-wrap: break-word;
        text-align: justify;
        right: 5%;
        border-radius: 2rem;
        color: #A0CD60;
    }
}  */

@media screen and (min-width:1420px) {
    .container2 .intro {
        color: #1F0802;
        font-size: 2.5rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (max-width:1419px) and (min-width:836px) {
    .container2 .intro {
        color: #1F0802;
        font-size: 2rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (min-width:565px) and (max-width:835px) {
    .container2 .intro {
        color: #1F0802;
        font-size: 1.5rem;
        padding: 6rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
}

@media screen and (max-width:565px){
    .container2 .intro {
        color: #1F0802;
        font-size: 1.2rem;
        padding: 3rem;
        font-weight: 700;
        text-align: center;
        position: absolute;
        top: 17%;
    }
    .container2 p{
        font-family: 'Fira Code';
        font-size: 3rem;
        font-weight: 600;
        padding-left: 2rem;
        color: transparent;
        -webkit-text-stroke-color: #38184C;
        -webkit-text-stroke-width: 0.09rem;
    }
}

.code{
    font-family: 'Fira Code';
    background-color: #1F0802;
    position: absolute;
    top: 55%;
    font-size: 0.7rem;
    font-weight: 700;
    left: 3%;
    padding-bottom: 8rem;
    padding-top: 2rem;
    white-space: pre-wrap;
    word-wrap: break-word;
    text-align: justify;
    right: 3%;
    border-radius: 2rem;
    color: #A0CD60;
}

.intro span {
    color: #5d2b7c;
}

.container3 {
    position: absolute;
    top: 200%;
    height: 100%;
    background: #1F0802;
    width: 100%;
}
@media screen and  (min-width:751px){
.container3 p {
    position: absolute;
    top: -10%;
    right: 3%;

    color: transparent;
    font-size: 8rem;
    font-weight: 900;
    -webkit-text-stroke-color: #CEF09D;
    -webkit-text-stroke-width: 0.05rem;
    animation: slide-up 3s;
}

/* .project-grid {

    padding-top: 20em;
    display: flex;
    justify-content: space-around;

}

.project {
    vertical-align: middle;
    height: 20rem;
    width: 15rem;
    border-radius: 2rem;
    border: dashed 0.5vh #A0CD60;
    transition: 1s ease-out;
    color: #A0CD60;
    font-size: 2rem;
    text-align: center;
    font-weight: 700;
}

.project:hover {
    background: #A0CD60;
    color: #5d2b7c;
    height: 22rem;
    width: 17rem;

}

.project h5 {
    color: #1F0802;
    padding: 1rem;
} */
}
/* ... */

